2010-02-05  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (AS_VAR_APPEND): Fix a few typos.

  * data/analog/bf592/bf592: New.
  * data/analog/bf592/STEPPINGS: New.
  * data/analog/PARTS: Add bf592.
  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add
    analog/bf592/STEPPINGS and analog/bf592/bf592.

  * configure.ac: Enable quiet automake rules when available.

2010-02-04  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/ft2232.c (ft2232_gnice_init_common): Replace
    argument frequency with is_ft2232h. Call ft2232_set_frequency
    or ft2232h_set_frequency accordingly.
    (ft2232_gnice_init, ft2232_gniceplus_init): Change accordingly.
    (ft2232_armusbocd_init_common, ft2232_armusbocd_init,
    ft2232_armusbtiny_h_init): Likewise.

2010-02-03  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (AS_VAR_APPEND, m4_ifnblank): Provide fallback implementations
    if autoconf is too old (<2.64).

2010-02-02  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/detect.c (urj_tap_detect_parts): Include bit/hex output in the
    different messages so people don't have to manually pick apart the idcode
    to add support for new parts.

2010-02-02  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/bf518f_ezbrd.c: New file.
  * src/bus/buses_list.h (bus_drivers[]): Add bf518f_ezbrd and bf51x.
  * src/bus/Makefile.am (libbus_a_SOURCES): Add bf518f_ezbrd.c.
  * configure.ac (URJ_DRIVER_SET): Add bf518f_ezbrd and bf51x.
  * data/analog/bf518/STEPPINGS: Add bf518 silicon revision 0.1.

2010-02-02  Jie Zhang  <jie.zhang@analog.com>

  * data/analog/bf506/bf506: New.
  * data/analog/bf506/STEPPINGS: New.
  * data/analog/PARTS: Add bf506.
  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add
    analog/bf506/STEPPINGS and analog/bf506/bf506.

2010-02-02  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/state.c (urj_tap_state_name): New.
    (urj_tap_state_dump): New.
    (urj_tap_state_dump_2): New.
    (urj_tap_state_init): Call urj_tap_state_dump.